[tool.poetry]
name = "ssh_assets"
version = "1.6.3"
description = "SSH asset and key management tools"
homepage = "https://github.com/hile/ssh-assets"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
readme = "README.md"
include = [
    "LICENSE",
]
license = "BSD"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
cli-toolkit = "^2.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2"
pytest = "^7.1"
tox = "^3"

[tool.poetry.scripts]
ssh-assets = "ssh_assets.bin.ssh_assets.main:main"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
